--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <div class="row text-center">
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
-              <!-- <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i> -->
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-mountain fa-stack-1x fa-inverse"></i>
               
             </span>
             <h4 class="my-3">Missão</h4>
@@ -108,7 +108,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+              <i class="fas fa-eye fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="my-3">Visão</h4>
             <p class="text-muted">
@@ -120,7 +120,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+              <i class="fas fa-heart fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="my-3">Valores</h4>
             <p class="text-muted">
